@@ -25,7 +25,7 @@
 						</li>
 						<li class="user-footer">
 							<div class="pull-left">
-								<a href="#" class="btn btn-default btn-flat">Profile</a>
+								<a href="<?php echo site_url('profile'); ?>" class="btn btn-default btn-flat">Profile</a>
 							</div>
 							<div class="pull-right">
 								<a href="<?php echo site_url('login/logout'); ?>" class="btn btn-default btn-flat">Sign out</a>
